<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>es.upm.etsiinf.tfg.juanmahou</groupId>
    <artifactId>phenofhir</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>

    <properties>


        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <protobuf.version>4.31.0</protobuf.version>

        <spring.version>3.4.5</spring.version>
        <hapi.version>8.0.0</hapi.version>
        <postgresql.version>42.7.5</postgresql.version>

        <!-- Plugin versions -->
        <spring-boot-maven-plugin.version>${spring.version}</spring-boot-maven-plugin.version>
        <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
        <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
        <maven-protobuf-plugin.version>0.6.1</maven-protobuf-plugin.version>
        <maven-os-plugin.version>1.7.1</maven-os-plugin.version>
    </properties>

    <modules>
        <module>jpa-protoc-generators</module>
        <module>jpa-protoc-plugin</module>
        <module>phenofhir-server</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Maven JAR Plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>              <!-- pin to a known good release -->
                </plugin>
                <!-- Maven Shade Plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${maven-shade-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot-maven-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.xolstice.maven.plugins</groupId>
                    <artifactId>protobuf-maven-plugin</artifactId>
                    <version>${maven-protobuf-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>kr.motd.maven</groupId>
                    <artifactId>os-maven-plugin</artifactId>
                    <version>${maven-os-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>